# data-science-template-repo

./: .gitignore  LICENSE  README.md  requirements.txt
data/: README.md
notebooks/: README.md
src/: README.md
tests/: README.md  pyproject.toml
tests/notebooks/: sample_notebook.ipynb
