[tool.poetry]
name = "data-science-template-repo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
coverage = "^6.4.2"
engarde = "^0.4.0"
ipython = "^8.4.0"
jupyter = "^1.0.0"
jupyterlab = "^3.4.4"
matplotlib = "^3.5.2"
notebook = "^6.4.12"
pandas = "^1.4.3"
seaborn = "^0.11.2"
q = "^2.7"
python-dotenv = "^0.20.0"
watermark = "^2.3.1"
pytest = "^7.1.2"
tqdm = "^4.64.0"
numpy = "^1.23.1"
scikit-learn = "^1.1.1"
scipy = "^1.9.0"
nbdime = "^3.1.1"
runipy = "^0.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
